--- a/experiment/simulation/exp12.html
+++ b/experiment/simulation/exp12.html
@@ -5,7 +5,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-W59SWTR');</script><!--End Google Tag Manager-->
   <link href="style.css" rel="stylesheet"/>
-  <script src="exp.js"></script>
+  <script src="exp12.js"></script>
  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
   <script>
 function graph() {
@@ -31,9 +31,9 @@ var chart = new CanvasJS.Chart("chartContainer", {
 var j=0;
 var xVal = 0;
 var yVal = 0; 
-var updateInterval = 500;
+var updateInterval = 900;
 //var dataLength = 4;// number of dataPoints visible at any point
-var dp=[{xx:0.0,yy:0.0},{xx:0.00625,yy:41.73158},{xx:0.0125,yy:127.9769},{xx:0.025,yy:230.3583},{xx:0.03125,yy:233.6969},{xx:0.0375,yy:242.0432},{xx:0.04375,yy:229.8019},{xx:0.05,yy:229.5237},{xx:0.05625,yy:229.5237},{xx:0.075,yy:271.5335},{xx:0.1,yy:292.1211},{xx:0.125,yy:313.2651},{xx:0.15,yy:323.4198},{xx:0.175,yy:332.4616},{xx:0.2,yy:333.8527},{xx:0.20625,yy:333.8527}];
+var dp=[{xx:0.0,yy:0.0},{xx:0.00025,yy:52.46200115},{xx:0.00075,yy:160.8834702},{xx:0.00125,yy:279.7973394},{xx:0.00175,yy:384.7213417},{xx:0.0025,yy:412.7010757},{xx:0.004,yy:412.7010757},{xx:0.01,yy:419.6960092},{xx:0.02,yy:580.5794794},{xx:0.05,yy:699.4933486},{xx:0.14,yy:751.9553498},{xx:0.2,yy:682.0060149},{xx:0.23,yy:647.0313475}];
 var updateChart = function () {
 
       
@@ -48,7 +48,7 @@ var updateChart = function () {
       if (dps.length > 100) {
             dps.shift();
       }
-      if(j<15)
+      if(j<12)
       {chart.render();
       j++;}
 };
@@ -81,20 +81,20 @@ setInterval(function(){updateChart()}, updateInterval);
 <div class="container" id="con">
   <img id="im1" src="Images/blue.png"/>
   <button id="bt1" onclick="graph();myfun1()">Restart</button>
-  <button id="bt2" onclick="graph();myfun1()">Start</button>
+  <button id="bt2" onclick="myfun1();graph()">Start</button>
   <button id="bt3" onclick="myfun2()">Show-Graph</button>	
   <img id="im2" src="Images/restart.png"/>
   <img id="im3" src="Images/start.png"/>
   <img id="im4" src="Images/show_graph.png"/>
 </div>
-
+<p id="exp_tag"> <u>Corten Steel</u></p>
 <div id="botbox">
- <button id="mat">Types of Materials</button>
+<button id="mat">Types of Materials</button>
  <ul>
   <a href="exp11.html"><li>ASTM_A53</li></a>
   <a href="exp12.html"><li>Corten Steel</li></a>
   <a href="exp13.html"><li>Mild Steel</li></a>
-</ul>
+</ul> 
 <button id="length">Length</button>
 <button id="diameter">Diameter</button>
 <button id="load">Load</button>
@@ -102,8 +102,8 @@ setInterval(function(){updateChart()}, updateInterval);
 <button id="stress">Stress</button>
 <button id="strain">Strain</button>
 <button id="young">Young's Modulus</button>
-<p id="plength">136 mm</p>
-<p id="pdiameter">15.127 mm</p>
+<p id="plength">50.8 mm</p>
+<p id="pdiameter">12.725 mm</p>
 <p id="pload">0.0 N</p>
 <p id="pstrain">0.0</p>
 <p id="pstress">0.0 Mpa</p>
