--- a/experiment/simulation/exp13.html
+++ b/experiment/simulation/exp13.html
@@ -5,7 +5,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-W59SWTR');</script><!--End Google Tag Manager-->
   <link href="style.css" rel="stylesheet"/>
-  <script src="exp.js"></script>
+  <script src="exp13.js"></script>
  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
   <script>
 function graph() {
@@ -33,7 +33,7 @@ var xVal = 0;
 var yVal = 0; 
 var updateInterval = 500;
 //var dataLength = 4;// number of dataPoints visible at any point
-var dp=[{xx:0.0,yy:0.0},{xx:0.00625,yy:41.73158},{xx:0.0125,yy:127.9769},{xx:0.025,yy:230.3583},{xx:0.03125,yy:233.6969},{xx:0.0375,yy:242.0432},{xx:0.04375,yy:229.8019},{xx:0.05,yy:229.5237},{xx:0.05625,yy:229.5237},{xx:0.075,yy:271.5335},{xx:0.1,yy:292.1211},{xx:0.125,yy:313.2651},{xx:0.15,yy:323.4198},{xx:0.175,yy:332.4616},{xx:0.2,yy:333.8527},{xx:0.20625,yy:333.8527}];
+var dp=[{xx:0,yy:0},{xx:0.00142,yy:10.61299177},{xx:0.00285,yy:20.49405306},{xx:0.00428,yy:32.57090576},{xx:0.00571,yy:40.07319305},{xx:0.00714,yy:72.27813358},{xx:0.00857,yy:103.3851784},{xx:0.01,yy:139.2497713},{xx:0.01142,yy:209.5150961},{xx:0.01285,yy:273.4675206},{xx:0.01428,yy:345.4711802},{xx:0.01574,yy:436.5965233},{xx:0.01714,yy:527.5388838},{xx:0.01857,yy:565.9652333},{xx:0.02,yy:649.0393413},{xx:0.02142,yy:700.8234218},{xx:0.02285,yy:742.5434584},{xx:0.02428,yy:756.6331199},{xx:0.025714,yy:789.5699909} ,{xx:0.02714,yy:797.621226}  ,{xx:0.02857,yy:801.4638609} ,{xx:0.03,yy:806.0384263}  ,{xx:0.03142,yy:807.5022873} ,{xx:0.03285,yy:805.6724611} ,{xx:0.03428,yy:801.2808783} ,{xx:0.03571,yy:773.6505032} ,{xx:0.03714,yy:747.904849}];
 var updateChart = function () {
 
       
@@ -48,12 +48,12 @@ var updateChart = function () {
       if (dps.length > 100) {
             dps.shift();
       }
-      if(j<15)
+      if(j<26)
       {chart.render();
       j++;}
 };
 
-//updateChart();
+// updateChart();
 setInterval(function(){updateChart()}, updateInterval);
 
 }
@@ -81,7 +81,7 @@ setInterval(function(){updateChart()}, updateInterval);
 <div class="container" id="con">
   <img id="im1" src="Images/blue.png"/>
   <button id="bt1" onclick="graph();myfun1()">Restart</button>
-  <button id="bt2" onclick="graph();myfun1()">Start</button>
+  <button id="bt2" onclick="myfun1();graph()">Start</button>
   <button id="bt3" onclick="myfun2()">Show-Graph</button>	
   <img id="im2" src="Images/restart.png"/>
   <img id="im3" src="Images/start.png"/>
@@ -89,7 +89,7 @@ setInterval(function(){updateChart()}, updateInterval);
 </div>
 
 <div id="botbox">
- <button id="mat">Types of Materials</button>
+  <button id="mat">Types of Materials</button>
  <ul>
   <a href="exp11.html"><li>ASTM_A53</li></a>
   <a href="exp12.html"><li>Corten Steel</li></a>
@@ -102,8 +102,8 @@ setInterval(function(){updateChart()}, updateInterval);
 <button id="stress">Stress</button>
 <button id="strain">Strain</button>
 <button id="young">Young's Modulus</button>
-<p id="plength">136 mm</p>
-<p id="pdiameter">15.127 mm</p>
+<p id="plength">350 mm</p>
+<p id="pdiameter">11.8 mm</p>
 <p id="pload">0.0 N</p>
 <p id="pstrain">0.0</p>
 <p id="pstress">0.0 Mpa</p>
