fixed file paths

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<!-- Add CSS at the head of HTML file -->
-    <link rel="stylesheet" href="./css/main.css">
+
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 		 <iframe id="exp_container" src="exp11.html"></iframe> 
