--- a/experiment/simulation/exp11.html
+++ b/experiment/simulation/exp11.html
@@ -4,8 +4,8 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-W59SWTR');</script><!--End Google Tag Manager-->
-  <link href="../css/style.css" rel="stylesheet"/>
-  <script src="../js/exp.js"></script>
+  <link href="css/style.css" rel="stylesheet"/>
+  <script src="js/exp.js"></script>
  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
   <script>
 function graph() {
