updated file path in index.html

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- Add CSS at the head of HTML file -->
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 		 <iframe id="exp_container" src="exp11.html"></iframe> 
