renamed graph name

--- a/experiment/simulation/exp13.html
+++ b/experiment/simulation/exp13.html
@@ -87,7 +87,7 @@ setInterval(function(){updateChart()}, updateInterval);
   <img id="im3" src="Images/start.png"/>
   <img id="im4" src="Images/show_graph.png"/>
 </div>
-<p id="exp_tag"> <u>Show-Graph</u></p>
+<p id="exp_tag"> <u> Mild Steel</u></p>
 <div id="botbox">
   <button id="mat">Types of Materials</button>
  <ul>
