--- a/experiment/simulation/comparison.html
+++ b/experiment/simulation/comparison.html
@@ -7,36 +7,26 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/virtual-labs/virtual-style@0.0.6-b/css/style.min.css" />
     <link rel="stylesheet" href="./css/main.css">
 </head>
-
-<div class="v-tabs ml-4">
-    <ul>
-        <li>
-            <a href="index.html">
-                <span>ASTM A53</span>
-            </a>
-        </li>
-        <li>
-            <a href="corten.html">
-                <span>Corten Steel</span>
-            </a>
-        </li>
-        <li>
-            <a href="mild.html">
-                <span>Mild Steel</span>
-            </a>
-        </li>
-        <li class="is-active">
-            <a href="comparison.html">
-                <span>Comparison</span>
-            </a>
-        </li>
-    </ul>
-</div>
-<div class="columns is-centered">
-    <div class="column has-text-centered is-half">
-        <div id="chartContainer"></div>
+<body>
+    <div class="v-tabs ml-4">
+        <ul>
+            <li><a href="index.html"><span>ASTM A53</span></a></li>
+            <li><a href="corten.html"><span>Corten Steel</span></a></li>
+            <li><a href="mild.html"><span>Mild Steel</span></a></li>
+            <li class="is-active"><a href="comparison.html"><span>Comparison</span></a></li>
+        </ul>
     </div>
-</div>
+    <div class="columns is-centered">
+        <div class="column has-text-centered is-half">
+            <div class="v-datalist-container ">
+		<div class="v-datalist-row" id="obs-table">
+		    <div class="v-table-wrap">
+                        <div id="chartContainer"></div>
+            	    </div>
+		</div>
+	    </div>
+        </div>
+    </div>
 <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
 <script src="./js/comparison.js"></script>
 </body>
