added scrollbar for graph

--- a/experiment/simulation/corten.html
+++ b/experiment/simulation/corten.html
@@ -70,8 +70,9 @@
                         </div>
                         <div id="result"></div>
                     </div>
-                    
-                        <div id="chartContainer"></div>
+                        <div class="v-table-wrap">
+                            <div id="chartContainer"></div>
+                        </div>
                     </div>
                 </div>
             <div class="column has-text-centered is-4-desktop is-10-tablet is-10-mobile simulation" id="container">
