added scrollbar for graph

--- a/experiment/simulation/corten.html
+++ b/experiment/simulation/corten.html
@@ -70,11 +70,13 @@
                         </div>
                         <div id="result"></div>
                     </div>
+                    <div class="v-datalist-row">
                         <div class="v-table-wrap">
                             <div id="chartContainer"></div>
                         </div>
                     </div>
                 </div>
+            </div>
             <div class="column has-text-centered is-4-desktop is-10-tablet is-10-mobile simulation" id="container">
                 <div class="v-datalist-container">
                     <div class="columns">
