--- a/experiment/simulation/mild.html
+++ b/experiment/simulation/mild.html
@@ -71,9 +71,11 @@
                         </div>
                         <div id="result"></div>
                     </div>
+                    <div class="v-datalist-row">
                         <div class="v-table-wrap">
                             <div id="chartContainer"></div>
-                    </div>
+                        </div>
+                    </div>    
                 </div>
             </div>
             <div class="column has-text-centered is-4-desktop is-10-tablet is-10-mobile simulation" id="container">
